--- a/src/index-aula.css
+++ b/src/index-aula.css
@@ -1,4 +1,4 @@
-/* reset */
+/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +9,11 @@ body {
   background-color: black;
   color: white;
   font-family: "Montserrat", sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 #root {
@@ -26,35 +31,25 @@ body {
   align-items: center;
 }
 
-.header__link {
-  color: inherit;
-  text-decoration: none;
-}
-
 .header__link:hover {
   text-decoration: underline;
 }
 
-
 /* Main */
 
 .main {
+  background-color: brown;
   padding: 20px;
-  margin: 0 10px 20px;
-  background-image: linear-gradient(to bottom, #0c4d23, black);
+  margin: 0 10px 10px;
   border-radius: 15px;
   flex: 1;
+  background-image: linear-gradient(to bottom, #062d14, black);
 }
 
 .main__texts {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.main__link {
-  color: inherit;
-  text-decoration: none;
 }
 
 .main__link:hover {
